Updated dependencies and added new components

--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
-    "@nextui-org/react": "^2.1.13",
+    "@nextui-org/react": "^2.2.9",
+    "@nextui-org/use-infinite-scroll": "^2.1.2",
+    "@react-stately/data": "^3.11.0",
     "classnames": "^2.3.2",
     "firebase": "^10.5.2",
-    "framer-motion": "^10.16.4",
+    "framer-motion": "^10.16.5",
+    "nanoid": "^5.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
