--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@nextui-org/use-infinite-scroll": "^2.1.2",
     "@react-stately/data": "^3.11.0",
     "classnames": "^2.3.2",
+    "driver.js": "^1.3.1",
     "firebase": "^10.5.2",
     "framer-motion": "^10.16.5",
     "nanoid": "^5.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.18.0",
     "react-toastify": "^9.1.3"
   },
